# silicon-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/adr/: 001-runtime-abstraction.md  002-perplexity-methodology.md  003-result-cache.md  004-cross-runtime-comparability.md
docs/benchmarks/: qwen2.5-0.5b-llamacpp-m1-2026-07-16.json  qwen2.5-0.5b-llamacpp-m1-2026-07-16.md  qwen2.5-0.5b-m1-2026-07-15.json  qwen2.5-0.5b-m1-2026-07-15.md
docs/writeups/: the-benchmark-that-lied.md
silicon_eval/: __init__.py  cli.py  exceptions.py  runner.py
silicon_eval/cache/: __init__.py  store.py
silicon_eval/evals/: __init__.py  base.py  datasets.py  hellaswag.py  mmlu.py  perplexity.py
silicon_eval/profiling/: __init__.py  energy.py  generation.py  memory.py  stats.py
silicon_eval/report/: __init__.py  json_io.py  machine.py  markdown.py  schema.py
silicon_eval/runtimes/: __init__.py  base.py  llamacpp_runtime.py  mlx_runtime.py
tests/: conftest.py  test_base.py  test_cache.py  test_cli.py  test_datasets.py  test_energy.py  test_hellaswag.py  test_integration_mlx.py  test_llamacpp_runtime.py  test_markdown.py  test_mlx_runtime.py  test_mlx_score.py  test_mmlu.py  test_perplexity.py  test_profiling.py  test_report.py  test_runner.py
