[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silicon-eval"
dynamic = ["version"]  # single-sourced from silicon_eval/__init__.py
description = "Evaluation and profiling harness for LLMs on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Inderdeep Singh", email = "inder9457@gmail.com" }]
keywords = ["mlx", "llm", "benchmark", "quantization", "apple-silicon", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "psutil>=5.9",
    # >=0.25: EntryNotFoundError moved to huggingface_hub.errors in 0.25
    "huggingface_hub>=0.25",
    "pyarrow>=15",
]

[project.optional-dependencies]
mlx = [
    "mlx-lm>=0.20",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "types-psutil",
    "numpy>=1.26",  # backs the fake mlx.core used in unit tests
]

[project.urls]
Repository = "https://github.com/Indy102/silicon-eval"
Issues = "https://github.com/Indy102/silicon-eval/issues"

[project.scripts]
silicon-eval = "silicon_eval.cli:app"

[tool.hatch.version]
path = "silicon_eval/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["silicon_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

# python_version is intentionally unpinned: it tracks the running interpreter,
# so each CI matrix leg (3.11–3.13) typechecks with its own semantics.
[tool.mypy]
strict = true
files = ["silicon_eval", "tests"]

# mlx/mlx-lm/pyarrow ship no type stubs.
[[tool.mypy.overrides]]
module = ["mlx", "mlx.*", "mlx_lm", "mlx_lm.*", "pyarrow", "pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow' --cov=silicon_eval --cov-report=term-missing --cov-fail-under=80"
markers = [
    "slow: integration tests that download and run a real model (Apple Silicon only; run with `pytest -m slow --no-cov`)",
]
